# rust-recipe

./: .gitlab-ci.yml  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
examples/: async.rs  blocking.rs  custom.rs
src/: default_scraper.rs  lib.rs  nutrition_information.rs  recipe_information_provider.rs  recipe_scraper.rs  restricted_diet.rs  schema_scraper.rs
tests/: crab-lasagne.html  integration_test.rs
