[package]
name = "rust-recipe"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A Rust crate that scrapes recipes from websites."
repository = "https://github.com/BreD1810/rust-recipe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
blocking = ["dep:ureq"]
async = ["dep:reqwest"]

[dependencies]
iso8601-duration = "0.2.0"
once_cell = "1.19.0"
regex = "1.10.2"
reqwest = { version="0.11.24", optional=true }
scraper = "0.18.1"
serde_json = "1.0.111"
ureq = { version="2.9.1", optional=true }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
